--- a/src/css/dom.css
+++ b/src/css/dom.css
@@ -6,9 +6,25 @@
 
   --app-primary-color: #0000ff;
   --app-warn-color: #ff0000;
+  --app-background-color: #ffffff;
+
+  --app-header-height: 64px;
 
   font-family: var(--app-font);
   font-size: var(--app-font-size);
+  background-color: var(--app-background-color);
+
+  overflow-y: scroll;
+}
+
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
+[hidden] {
+  visibility: hidden;
 }
 
 .app-cl-primary {
@@ -25,7 +41,7 @@
 
 .app-cl-number {
   font-family: monospace;
-  font-size: var(--app-font-size);
+  font-size: inherit;
   text-align: right;
 }
 
@@ -42,12 +58,19 @@
   }
 }
 
+.app-cmp-inputs-list {
+  margin-top: 16px;
+}
+
 .app-cmp-input {
   display: flex;
   flex-direction: row;
   align-items: stretch;
+  box-sizing: border-box;
+  width: 100%;
 
   label {
+    flex: 1 0 auto;
     display: flex;
     flex-direction: row;
     column-gap: 8px;
@@ -68,12 +91,13 @@
   .app-elem-title-no {
     flex: 1 0 auto;
     text-align: right;
+    padding-left: 1ch;
   }
 }
 
 .app-elem-input,
 .app-elem-result {
-  width: 30ch;
+  flex: 1 0 auto;
 }
 .app-elem-input {
   height: 100%;
@@ -83,4 +107,69 @@
   padding-right: calc(2ch + 1px);
   font-weight: bold;
   text-decoration: underline double;
+}
+
+/* Section */
+.app-cmp-main {
+  width: min(480px, 100%);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.app-cmp-main-actions-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  column-gap: 8px;
+
+  position: sticky;
+  top: 0px;
+  height: var(--app-header-height);
+  background-color: var(--app-background-color);
+  z-index: 9999;
+}
+
+.app-cmp-sections-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.app-cmp-section {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+
+  & > :last-child {
+    margin-bottom: 32px;
+  }
+}
+
+.app-elem-section-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 8px;
+
+  position: sticky;
+  top: var(--app-header-height);
+  background-color: var(--app-background-color);
+  padding-bottom: 16px;
+  border-bottom: 1px solid black;
+
+  & > .app-elem-section-title {
+    margin: 0px;
+    width: 10ch;
+    margin-left: auto;
+    margin-right: auto;
+
+    display: inline-flex;
+    flex-direction: row;
+    align-items: baseline;
+
+    .app-elem-section-no {
+      flex: 1 0 auto;
+      padding-left: 1ch;
+    }
+  }
 }
